k8s/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: ci-cd
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
